[project]
name = "expense_tracker"
version = "0.1.0"
description = "Simple personal expense tracker"
authors = [
    { name="Robert Scott Clement", email="sclement2@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
tracker-console = "tracker.console_app:main"

[tool.setuptools]
package-data = { "tracker" = ["data/*.csv"] }

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"